--- a/style.css
+++ b/style.css
@@ -12,12 +12,15 @@ html {
 
 h1 {
 	font-style: 3rem;
-	color: #ab2200;
-	font-family: 'Caladea';
+	color: #b59c49;
+}
+h2 {
+	font-style: 3rem;
+	color: #e28787;
 }
 
  hr {
- 	border-color: #d07d5b;
+ 	border-color: #da4282;
  	border-width: 3px;
  	max-width: 65px;
  }
@@ -33,8 +36,8 @@ h1 {
 }
 
 .btn-primary {
-	background-color: #d07d5b;
-	border-color: #F05f44;
+	background-color: #da4282;
+	border-color: #F05f44
 }
 
 .btn-primary:hover {
